[gd_scene load_steps=2 format=3 uid="uid://c4mf0ifovvbi1"]

[ext_resource type="Script" uid="uid://qthgxdol2fno" path="res://src/ui/definition_screen.gd" id="1_2h06g"]

[node name="DefinitionScreen" type="VBoxContainer"]
offset_right = 289.0
offset_bottom = 188.0
script = ExtResource("1_2h06g")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="NewButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "New"

[node name="OpenButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Open"

[node name="SaveButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="TestButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Test"

[node name="FilenameLabel" type="Label" parent="."]
layout_mode = 2
text = "<untitled>"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ExampleContainer" type="VBoxContainer" parent="HBoxContainer2"]
layout_mode = 2

[node name="AddExampleButton" type="Button" parent="HBoxContainer2/ExampleContainer"]
layout_mode = 2
text = "Add Example"

[node name="CounterExampleContainer" type="VBoxContainer" parent="HBoxContainer2"]
layout_mode = 2

[node name="AddCounterExampleButton" type="Button" parent="HBoxContainer2/CounterExampleContainer"]
layout_mode = 2
text = "Add Counter Example"

[node name="PlayerContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PlayerContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TimelineSlider" type="HSlider" parent="PlayerContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="PlayerContainer/HBoxContainer"]
layout_mode = 2
text = "Play"

[node name="StopButton" type="Button" parent="PlayerContainer/HBoxContainer"]
layout_mode = 2
text = "Stop"
